Fixed: wflow-consoleweb - UI Theme - Bold text is not showing in bold for some Window font. @8.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/userview.css
+++ b/wflow-consoleweb/src/main/webapp/css/userview.css
@@ -5,6 +5,10 @@ html, body {
     font-family: PT Sans,Arial,serif;
     font-size: 13px;
 }
+b,
+strong {
+  font-weight: 700;
+}
 
 body, ul{
     margin:0px;
