--- a/wflow-consoleweb/src/main/webapp/css/userview8.css
+++ b/wflow-consoleweb/src/main/webapp/css/userview8.css
@@ -8,6 +8,10 @@ a:hover {
 html, body {
     overscroll-behavior: none;
 }
+b,
+strong {
+  font-weight: 700;
+}
 body{
     margin: 0;
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
